<resources>
    <string name="app_name">智+治理</string>
    <string name="action_settings">Settings</string>
    <string name="personal_info_collection">个人信息采集</string>

    <string name="home_enter">主界面入口</string>
    <string name="home_tab_main">首页</string>
    <string name="home_tab_data_collect">数据采集</string>
    <string name="home_tab_question_upload">问题上报</string>

    <string name="problem_info">问题信息</string>
    <string name="person_info">个人信息</string>
    <string name="problem_source">来源</string>
    <string name="problem_type">类型</string>
    <string name="problem_desc">描述</string>
    <string name="problem_location">地址</string>
    <string name="select_location">选择地址</string>
    <string name="select_attachment">上传附件</string>
    <string name="problem_attachment">附件</string>
    <string name="deal_with_info">处理信息</string>
    <string name="deal_with_suggestion">处理意见</string>
    <string name="input_problem_source">请输入问题来源</string>
    <string name="input_problem_type">请输入问题类型</string>
    <string name="input_problem_desc">请输入问题描述</string>
    <string name="input_problem_location">请选择或输入地址</string>
    <string name="select_problem_pic">请选择需要上传的图片</string>
    <string name="input_problem_suggestion">请输入处理意见</string>
    <string name="btn_commit">提交</string>

    <string name="new_person">新增用户</string>
    <string name="addressinfo">让我们想象一下，在应用程序中有一个视频播放器的情况。在同一个activity中，我们也可能会有其他操作最终可能会出现如下所示的</string>
    <string name="push_server">更新到服务器</string>
    <string name="perons_info">人员列表信息:</string>
    <string name="search">搜索</string>
    <string name="check_problem_detail">查看详情</string>
    <string name="common_default_title">---</string>
    <string name="dialog_default_title">---</string>
    <string name="dialog_default_content">---------------------------</string>
    <string name="dialog_default_sure_btn_text">是</string>
    <string name="dialog_default_fail_btn_text">否</string>
    <string name="dialog_single_sure_btn_text">确认</string>

    <string name="activity_id_card_title_text">二代身份证扫描</string>
    <string name="outsetting_tips">设置迁出后，将无法再对该人员进行信息采集及修改，请谨慎确认是否确认设置为迁出。</string>
    <string name="confirm_out">确认迁出</string>
    <string name="cancel">取消</string>
    <string name="ic_card_warning_text">将身份证放入框内即可自动扫描\n点击按钮确认\n\n未扫描到身份证，可从相册添加</string>

    <string name="see_problem_detail">查看详情</string>

    <string name="kind_default_key_suffix">: </string>
    <string name="date_year_month_day">%s年%s月%s日</string>
    <string name="date_title_top_text">%s-%s-%s</string>

    <string name="create_house_tip">该房屋未创建，需完善房屋信息后才能新增住户。</string>
    <string name="fill_info">确认，完善信息</string>
    <string name="no_edit">放弃编辑</string>

    <string name="conception_control_info">避孕节育信息</string>

    <string name="childbearing_age_info">育龄妇女信息</string>
    <string name="children_info">子女信息</string>
    <string name="new_31_commit_text">保存并提交</string>
    <string name="zk_filed_year_label">年</string>
    <string name="zk_filed_month_label">月</string>
    <string name="zk_filed_day_label">日</string>
    <string name="zk_filed_time_center_text">至</string>

    <string name="rule_string">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>


</resources>
