<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_drawable"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_title_blue_drawable"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/dialog_default_title"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_20"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/dp_20"
        android:text="@string/dialog_default_content"
        android:textSize="@dimen/sp_14"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/dp_10">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">


            <Button
                android:id="@+id/sure_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/bg_dialog_btn_blue_drawable"
                android:text="@string/dialog_default_sure_btn_text"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"/>

            <Button
                android:id="@+id/fail_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/bg_dialog_btn_blue_drawable"
                android:text="@string/dialog_default_fail_btn_text"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"/>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>