<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/data_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:padding="@dimen/dp_10"
            android:text="@string/addressinfo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_btn_commit"
            android:gravity="center"
            android:text="@string/new_person"
            android:textColor="@color/white"/>

    </LinearLayout>

    <cc.zkteam.zkinfocollectpro.view.ScrollRecycleView
        android:id="@+id/recycle_data"
        android:layout_margin="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/data_head"/>


    <Button
        android:id="@+id/push_serve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/push_server"
        android:layout_marginTop="10dp"
        android:layout_below="@id/recycle_data"/>


    </RelativeLayout>

</ScrollView>