<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/data_head"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10">

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="60dp"
            android:layout_gravity="left"
            android:layout_weight="7"
            android:background="@drawable/bg_table_shape"
            android:padding="@dimen/dp_5"
            android:text="@string/addressinfo"
            android:textColor="#444444"
            android:textSize="15dp" />

        <Button
            android:id="@+id/update_person"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/bg_btn_commit"
            android:gravity="center"
            android:text="@string/new_person"
            android:textColor="#fff" />

    </LinearLayout>


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/perons_info"
        android:textSize="18dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="#cbe1f1" />


</LinearLayout>