<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_outsetting_edit"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/title"
        android:textSize="18sp"
        android:textColor="#fff"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:text="设置"
        />

    <TextView
        android:text="@string/create_house_tip"
        android:padding="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title"
        android:id="@+id/edit_reason"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_outsetting_edit"
        android:textSize="12sp"
        android:textColor="#999999"
        android:gravity="start"
        />

    <LinearLayout
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edit_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/confirm"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/fill_info"
            android:textSize="@dimen/sp_12"
            android:textColor="#fff"
            android:background="@drawable/bg_btn_commit"
            />
        <android.support.v4.widget.Space
            android:layout_width="21dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/cancel"
            android:gravity="center"
            android:textColor="#fff"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/no_edit"
            android:textSize="@dimen/sp_12"
            android:background="@drawable/bg_btn_commit"
            />


    </LinearLayout>


    

</RelativeLayout>